kustomize/dataplane/choreo-obs/netpol/opentelemetry-agent.yaml
# --------------------------------------------------------------------
# Copyright (c) 2022, WSO2 Inc. (http://wso2.com) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# -----------------------------------------------------------------------

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: opentelemetry-agent
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      choreo.component: opentelemetry-agent
  ingress: 
    - namespaceSelector:
        matchLabels:
          name: pl
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/cluster-service: "true"
        podSelector:
          matchLabels:
            k8s-app: kube-dns # Allow kube-dns pods
      ports:
      - port: 53
        protocol: UDP
